# warehousesuite

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLEANUP_SUMMARY.md  EFFICIENCY_REPORT.md  MARKETPLACE.md  PRIVACY.md  README.md  TODO.md  WMSUITE_SETTINGS_GUIDE.md  license.txt  package.json  psychological_handbook.md  pyproject.toml  technical_handbook.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
frontend/: eslint.config.js  index.html  package.json  proxyOptions.ts  tsconfig.json  vite.config.ts
frontend/pow-dashboard/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
graphify-out/: .graphify_cached.json  .graphify_incremental.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/obsidian/: $f().md  $f()_1.md  $k().md  $m().md  $n.md  $s().md  $u().md  $v().md  $x().md  $y().md  $y()_1.md  .__init__().md  .__init__()_1.md  ._addToQueue().md  ._addToQueue()_1.md  ._close().md  ._close()_1.md  ._destroy().md  ._destroy()_1.md  ._drainQueue().md  ._drainQueue()_1.md  ._extract_roles().md  ._hostname().md  ._hostname()_1.md  ._packet().md  ._packet()_1.md  ._port().md  ._port()_1.md  ._query().md  ._query()_1.md  ._registerAckCallback().md  ._registerAckCallback()_1.md  ._sendConnectPacket().md  ._sendConnectPacket()_1.md  .abort().md  .abort()_1.md  .ack().md  .ack()_1.md  .active().md  .active()_1.md  (+2014 more)
powdashboard/: .env.production  index.html  package.json  vite.config.ts
warehousesuite/: hooks.py  install.py  modules.txt  psychological_handbook.md  technical_handbook.md
wiki/: README.md  getting-started.md  installation.md  user-guide.md
(+128 files in other folders)
