[project]
name = "warehousesuite"
authors = [
    { name = "Sagar Ratan Garg", email = "sagar1ratan1garg1@gmail.com"}
]
description = "Mobile-first warehouse management for ERPNext with batch tracking, stock concerns, and manufacturing support."
requires-python = ">=3.10,<3.13"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # frappe and erpnext are installed and managed by bench, not pip.
    # Version compatibility (v15+v16) is declared via Frappe Cloud Marketplace UI.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
